--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
         <h1 class="nav-brand"><a href="/">Fun With Triangle</a></h1>
         <ul class="list-non-bulet nav-pills">
             <li class="list-item-inline">
-                <a class="link" href="/is-triangle.html">Is Triangle ?</a>
+                <a class="link" href="/index.html">Is Triangle ?</a>
             </li>
             <li class="list-item-inline">
                 <a class="link link-active" href="/quiz.html">Quiz</a>
